water-prod/ingress/water-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: water
  namespace: water
spec:
  ingressClassName: nginx
  rules:
  - host: water.teamhephy.info
    http:
      paths:
      - backend:
          service:
            name: water
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - water.teamhephy.info
    secretName: water-tls
